# Couch_Conduit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  lan-benchmark-plan.md
include/couch_conduit/client/: client_session.h  connection_screen.h  decoder.h  input_capture.h  overlay.h  renderer.h
include/couch_conduit/common/: aes_gcm.h  congestion.h  log.h  reed_solomon.h  session.h  signaling.h  stun.h  system_tuning.h  transport.h  types.h
include/couch_conduit/host/: capture.h  encoder.h  host_session.h  input_injector.h
installer/: CouchConduit.iss  CouchConduit.wxs
scripts/: benchmark.ps1  build-installer.ps1  package.ps1  start-client.bat  start-host.bat
scripts/dist-assets/: README.txt  Start-Client.bat  Start-Host.bat
server/: package.json  wrangler.toml
server/src/: index.ts
src/client/: CMakeLists.txt  client_session.cpp  main.cpp
src/client/audio/: audio_player.cpp
src/client/decode/: d3d11_decoder.cpp
src/client/input/: input_capture.cpp
src/client/render/: overlay.cpp  renderer.cpp
src/client/ui/: connection_screen.cpp
src/common/: CMakeLists.txt
src/common/crypto/: aes_gcm.cpp
src/common/fec/: reed_solomon.cpp
src/common/net/: signaling.cpp  stun.cpp
src/common/protocol/: session.cpp
src/common/transport/: audio_receiver.cpp  audio_sender.cpp  congestion.cpp  input_receiver.cpp  input_sender.cpp  udp_socket.cpp  video_receiver.cpp  video_sender.cpp
src/common/util/: system_tuning.cpp
src/host/: CMakeLists.txt  host_session.cpp  main.cpp
src/host/audio/: wasapi_capture.cpp
src/host/capture/: dxgi_capture.cpp
src/host/encode/: nvenc_encoder.cpp
src/host/input/: input_injector.cpp
